Bug 91157 - Mail merge crashes since the VclPtr merge
Summary: Mail merge crashes since the VclPtr merge
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:5.0.0
Keywords:
: 91027 91166 (view as bug list)
Depends on:
Blocks: VclPtr
  Show dependency treegraph
 
Reported: 2015-05-08 11:14 UTC by Miklos Vajna
Modified: 2015-05-16 02:35 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Miklos Vajna 2015-05-08 11:14:13 UTC
Breakpoint 1, vcl::Window::dispose (this=0x56bf470) at /home/vmiklos/git/libreoffice/master/vcl/source/window/window.cxx:271
271                 OSL_FAIL( aTempStr.getStr() );
(gdb) bt
#0  vcl::Window::dispose (this=0x56bf470) at /home/vmiklos/git/libreoffice/master/vcl/source/window/window.cxx:271
#1  0x00007ffff0a4f7fc in Control::dispose (this=0x56bf470) at /home/vmiklos/git/libreoffice/master/vcl/source/control/ctrl.cxx:76
#2  0x00007ffff2c31876 in svt::ORoadmap::dispose (this=0x56bf470) at /home/vmiklos/git/libreoffice/master/svtools/source/control/roadmap.cxx:220
#3  0x00007ffff0b29138 in OutputDevice::disposeOnce (this=0x56bf470) at /home/vmiklos/git/libreoffice/master/vcl/source/outdev/outdev.cxx:203
#4  0x00007ffff2cb9976 in VclPtr<svt::ORoadmap>::disposeAndClear (this=0x56bf370) at /home/vmiklos/git/libreoffice/master/include/vcl/vclptr.hxx:209
#5  0x00007ffff2cb7414 in ScopedVclPtr<svt::ORoadmap>::~ScopedVclPtr (this=0x56bf370, __in_chrg=<optimized out>) at /home/vmiklos/git/libreoffice/master/include/vcl/vclptr.hxx:344
#6  0x00007ffff2cb7202 in svt::RoadmapWizardImpl::~RoadmapWizardImpl (this=0x56bf370, __in_chrg=<optimized out>)
    at /home/vmiklos/git/libreoffice/master/svtools/source/dialogs/roadmapwizard.cxx:54
#7  0x00007ffff2cb466f in svt::RoadmapWizard::dispose (this=0x5692960) at /home/vmiklos/git/libreoffice/master/svtools/source/dialogs/roadmapwizard.cxx:155
#8  0x00007ffff0b29138 in OutputDevice::disposeOnce (this=0x5692960) at /home/vmiklos/git/libreoffice/master/vcl/source/outdev/outdev.cxx:203
#9  0x00007fffbf57885c in VclPtr<SwMailMergeWizard>::disposeAndClear (this=0x5a7f708) at /home/vmiklos/git/libreoffice/master/include/vcl/vclptr.hxx:209
#10 0x00007fffbf570ae8 in AbstractMailMergeWizard_Impl::~AbstractMailMergeWizard_Impl (this=0x5a7f700, __in_chrg=<optimized out>)
    at /home/vmiklos/git/libreoffice/master/sw/source/ui/dialog/swdlgfact.cxx:598
#11 0x00007fffbf570b34 in AbstractMailMergeWizard_Impl::~AbstractMailMergeWizard_Impl (this=0x5a7f700, __in_chrg=<optimized out>)
    at /home/vmiklos/git/libreoffice/master/sw/source/ui/dialog/swdlgfact.cxx:599
#12 0x00007fffd5811f10 in (anonymous namespace)::SwMailMergeWizardExecutor::DestroyWizardHdl (this=0x55de6c0, pDialog=0x5a7f700)
    at /home/vmiklos/git/libreoffice/master/sw/source/uibase/app/apphdl.cxx:545
#13 0x00007fffd5811edf in (anonymous namespace)::SwMailMergeWizardExecutor::LinkStubDestroyWizardHdl (instance=0x55de6c0, data=0x5a7f700)
    at /home/vmiklos/git/libreoffice/master/sw/source/uibase/app/apphdl.cxx:543
#14 0x00007ffff0853213 in Link<void*, long>::Call (this=0x1e5e0f0, data=0x5a7f700) at /home/vmiklos/git/libreoffice/master/include/tools/link.hxx:141
#15 0x00007ffff0a080c3 in ImplHandleUserEvent (pSVEvent=0x1cc8b90) at /home/vmiklos/git/libreoffice/master/vcl/source/window/winproc.cxx:2030
#16 0x00007ffff0a095bd in ImplWindowFrameProc (_pWindow=0x13d3f10, nEvent=22, pEvent=0x1cc8b90) at /home/vmiklos/git/libreoffice/master/vcl/source/window/winproc.cxx:2586
#17 0x00007ffff0eb78d6 in SalFrame::CallCallback (this=0x13d4710, nEvent=22, pEvent=0x1cc8b90) at /home/vmiklos/git/libreoffice/master/vcl/inc/salframe.hxx:244
#18 0x00007ffff0eb7400 in SalGenericDisplay::DispatchInternalEvent (this=0x1357fc0) at /home/vmiklos/git/libreoffice/master/vcl/generic/app/gendisp.cxx:90
#19 0x00007fffe2036241 in GtkData::userEventFn (data=0x625660) at /home/vmiklos/git/libreoffice/master/vcl/unx/gtk/app/gtkdata.cxx:944
#20 0x00007fffe203629a in call_userEventFn (data=0x625660) at /home/vmiklos/git/libreoffice/master/vcl/unx/gtk/app/gtkdata.cxx:954
#21 0x00007fffea8b28e5 in g_main_context_dispatch () from /usr/lib64/libglib-2.0.so.0
#22 0x00007fffea8b2c48 in ?? () from /usr/lib64/libglib-2.0.so.0
#23 0x00007fffea8b2cec in g_main_context_iteration () from /usr/lib64/libglib-2.0.so.0
#24 0x00007fffe20351d5 in GtkData::Yield (this=0x625660, bWait=true, bHandleAllCurrentEvents=false) at /home/vmiklos/git/libreoffice/master/vcl/unx/gtk/app/gtkdata.cxx:579
#25 0x00007fffe203918e in GtkInstance::Yield (this=0x625580, bWait=true, bHandleAllCurrentEvents=false) at /home/vmiklos/git/libreoffice/master/vcl/unx/gtk/app/gtkinst.cxx:394
#26 0x00007ffff0e00302 in ImplYield (i_bWait=true, i_bAllEvents=false) at /home/vmiklos/git/libreoffice/master/vcl/source/app/svapp.cxx:353
#27 0x00007ffff0dfcab1 in Application::Yield () at /home/vmiklos/git/libreoffice/master/vcl/source/app/svapp.cxx:382
#28 0x00007ffff0dfca5f in Application::Execute () at /home/vmiklos/git/libreoffice/master/vcl/source/app/svapp.cxx:336
#29 0x00007ffff77fb804 in desktop::Desktop::Main (this=0x7fffffffd7b0) at /home/vmiklos/git/libreoffice/master/desktop/source/app/app.cxx:1605
#30 0x00007ffff0e04b7a in ImplSVMain () at /home/vmiklos/git/libreoffice/master/vcl/source/app/svmain.cxx:162
#31 0x00007ffff0e04c94 in SVMain () at /home/vmiklos/git/libreoffice/master/vcl/source/app/svmain.cxx:196
#32 0x00007ffff783ef50 in soffice_main () at /home/vmiklos/git/libreoffice/master/desktop/source/app/sofficemain.cxx:96
#33 0x0000000000400954 in sal_main () at /home/vmiklos/git/libreoffice/master/desktop/source/app/main.c:48
#34 0x000000000040093a in main (argc=3, argv=0x7fffffffdaa8) at /home/vmiklos/git/libreoffice/master/desktop/source/app/main.c:47
(gdb) print aTempStr
$1 = "Window ( N3svt8ORoadmapE (Steps)) with live children destroyed:  N3svt7IDLabelE (1.) N3svt10HyperLabelE (Select starting document) N3svt7IDLabelE (2.) N3svt10HyperLabelE (Select document type) N3svt7I"...
Comment 1 Commit Notification 2015-05-08 12:24:48 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d174c1abc872e2f63b529455c19a92c1063b24a6

tdf#91157 svtools: fix missing dispose in RoadmapItem causing MM crash

It will be available in 5.0.0.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Michael Meeks 2015-05-08 16:30:08 UTC
*** Bug 91027 has been marked as a duplicate of this bug. ***
Comment 3 Michael Meeks 2015-05-08 20:21:03 UTC
*** Bug 91166 has been marked as a duplicate of this bug. ***