tdf#91157 svtools: fix missing dispose in RoadmapItem causing MM crash

Change-Id: I42a67ac2712dcf124e4fea3c9bbf705f211fe008